<resources>
    <string name="app_name">Globes</string>
    <string name="exhibition_map">Plan de l\'exposition</string>
    <string name="switch_language">Changer la langue</string>
    <string name="french">Français</string>
    <string name="english">Anglais</string>
    <string name="credits">Crédits</string>
    <string name="thankyou">Merci</string>
    <string name="tab_architects">Architectes</string>
    <string name="tab_routes">Itinéraires</string>
    <string name="tab_map">Plan</string>
    <string name="play_button">Bouton lecture</string>
    <string name="pause_button">Bouton pause</string>
    <string name="item_detail">Image du projet</string>
    <string name="title_activity_detail">Détail</string>

    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse a semper magna, sit amet fermentum elit. Praesent nisi ante, ultrices sed enim nec, molestie vestibulum augue. Mauris accumsan nibh lorem, eget maximus sem auctor ac. Morbi non tellus quis lectus ullamcorper sodales in et est. Duis molestie pellentesque varius. Maecenas nisl nisi, ullamcorper eu nulla id, gravida malesuada risus. Aliquam pulvinar augue ac orci pharetra tempus. Donec vel dictum erat. Duis tincidunt, turpis egestas imperdiet porttitor, dolor massa semper eros, quis laoreet nisl diam non neque. Fusce eget dolor dictum dolor dictum porta a egestas purus. Donec vulputate nisl eu malesuada tempor. Donec laoreet dignissim arcu, vel pulvinar urna mattis hendrerit. Phasellus suscipit aliquet egestas. Etiam mi nibh, rhoncus nec arcu ac, malesuada feugiat quam. Nam a enim eget neque finibus convallis a at sem.
        \r\n
        \r\n
        Aliquam facilisis ac dolor vitae dignissim. Aenean feugiat pretium orci ac scelerisque. Sed euismod feugiat ipsum, ut imperdiet justo tristique et. Donec non vestibulum dolor, blandit ultrices nisl. Phasellus tristique justo et felis viverra, et bibendum augue mattis. Phasellus orci odio, aliquam vitae dignissim eu, efficitur et nisi. Vivamus facilisis laoreet tristique. Suspendisse sapien sapien, dapibus id placerat non, lobortis ac massa. Pellentesque dignissim quam ut est dictum eleifend.</string>
    <string name="go_top">Remonter en haut de la liste</string>
    <string name="taille">Taille</string>
    <string name="pays">Pays</string>
    <string name="date">Date</string>
    <string name="architect">Architecte</string>
    <string name="number">Numéro</string>
    <string name="sort_by">Trier par:</string>
    <string name="recherche">Rechercher...</string>
    <string name="routes_header">Composez votre visite &quot;bis&quot;, avec cette sélection d\'itinéraires…</string>
    <plurals name="routeLength">
        <item quantity="one">%d projet</item>
        <item quantity="other">%d projets</item>
    </plurals>
    <string name="route_info">"Itinéraire : %s"</string>
    <string name="now_playing_info">"En écoute : %s"</string>
    <string name="contributors_title">Audioguide GLOBES</string>
    <string name="contributors">&#x2022; Commissaire :\r\n&#160;&#160;Yann ROCHER\r\n\r\n&#x2022; Acteurs :\r\n&#160;&#160;Hélène LAUSSEUR\r\n&#160;&#160;Olivier CLAVERIE\r\n\r\n&#x2022; Illustration sonore :\r\n&#160;&#160;Grégoire CARPENTIER\r\n\r\n&#x2022; Graphisme :\r\n&#160;&#160;DUOFLUO\r\n\r\n&#x2022; Conception et développement :\r\n&#160;&#160;Hervé BERENGER</string>
</resources>
