<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/list_header"
        android:orientation="horizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="#CCCCCC"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/sort_by"
            android:enabled="false"
            style="@style/SortLabels"/>

        <Button
            android:id="@+id/sort_by_index"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number"
            style="@style/SortLabels"/>

        <Button
            android:id="@+id/sort_by_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/architect"
            style="@style/SortLabels"/>

        <Button
            android:id="@+id/sort_by_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            style="@style/SortLabels"/>

        <Button
            android:id="@+id/sort_by_country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pays"
            android:textAllCaps="false"
            style="@style/SortLabels"/>

        <Button
            android:id="@+id/sort_by_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/taille"
            android:textAllCaps="false"
            style="@style/SortLabels"/>

    </LinearLayout>

    <ListView
        android:id="@+id/architects_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/list_header"
        android:dividerHeight="1dp" />

</android.support.constraint.ConstraintLayout>
